--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /llvm-project-11.0.0rc2.tar.xz
 /llvm-project-11.0.0rc2.tar.xz.sig
+/llvm-project-11.0.0rc3.tar.xz
+/llvm-project-11.0.0rc3.tar.xz.sig
