--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /llvm-project-11.0.0rc2.tar.xz.sig
 /llvm-project-11.0.0rc3.tar.xz
 /llvm-project-11.0.0rc3.tar.xz.sig
+/llvm-project-11.0.0rc5.tar.xz
+/llvm-project-11.0.0rc5.tar.xz.sig
