--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /llvm-project-11.0.0rc3.tar.xz.sig
 /llvm-project-11.0.0rc5.tar.xz
 /llvm-project-11.0.0rc5.tar.xz.sig
+/llvm-project-11.0.0rc6.tar.xz
+/llvm-project-11.0.0rc6.tar.xz.sig
