llvm 11.0.0 - final release

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /llvm-project-11.0.0rc5.tar.xz.sig
 /llvm-project-11.0.0rc6.tar.xz
 /llvm-project-11.0.0rc6.tar.xz.sig
+/llvm-project-11.0.0.tar.xz.sig
+/llvm-project-11.0.0.tar.xz
