--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /llvm-project-11.0.0rc6.tar.xz.sig
 /llvm-project-11.0.0.tar.xz.sig
 /llvm-project-11.0.0.tar.xz
+/llvm-project-11.0.1rc1.src.tar.xz
+/llvm-project-11.0.1rc1.src.tar.xz.sig
