--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /llvm-project-11.0.0.tar.xz
 /llvm-project-11.0.1rc1.src.tar.xz
 /llvm-project-11.0.1rc1.src.tar.xz.sig
+/llvm-project-11.0.1rc2.src.tar.xz
+/llvm-project-11.0.1rc2.src.tar.xz.sig
