--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /llvm-project-11.0.1rc1.src.tar.xz.sig
 /llvm-project-11.0.1rc2.src.tar.xz
 /llvm-project-11.0.1rc2.src.tar.xz.sig
+/llvm-project-11.0.1.src.tar.xz
+/llvm-project-11.0.1.src.tar.xz.sig
