--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /llvm-project-11.0.1rc2.src.tar.xz.sig
 /llvm-project-11.0.1.src.tar.xz
 /llvm-project-11.0.1.src.tar.xz.sig
+/llvm-project-11.1.0rc1.src.tar.xz
+/llvm-project-11.1.0rc1.src.tar.xz.sig
