--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /llvm-project-11.0.1.src.tar.xz.sig
 /llvm-project-11.1.0rc1.src.tar.xz
 /llvm-project-11.1.0rc1.src.tar.xz.sig
+/llvm-project-11.1.0rc2.src.tar.xz
+/llvm-project-11.1.0rc2.src.tar.xz.sig
