--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /llvm-project-11.1.0rc2.src.tar.xz.sig
 /llvm-project-12.0.0rc1.src.tar.xz
 /llvm-project-12.0.0rc1.src.tar.xz.sig
+/llvm-project-12.0.0rc2.src.tar.xz
+/llvm-project-12.0.0rc2.src.tar.xz.sig
