--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /llvm-project-12.0.0rc3.src.tar.xz.sig
 /llvm-project-12.0.0rc4.src.tar.xz
 /llvm-project-12.0.0rc4.src.tar.xz.sig
+/llvm-project-12.0.0rc5.src.tar.xz
+/llvm-project-12.0.0rc5.src.tar.xz.sig
