--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /llvm-project-12.0.0rc4.src.tar.xz.sig
 /llvm-project-12.0.0rc5.src.tar.xz
 /llvm-project-12.0.0rc5.src.tar.xz.sig
+/llvm-project-12.0.0.src.tar.xz
+/llvm-project-12.0.0.src.tar.xz.sig
