--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@
 /llvm-project-11.1.0rc2.src.tar.xz.sig
 /llvm-project-12.0.0rc1.src.tar.xz
 /llvm-project-12.0.0rc1.src.tar.xz.sig
+/llvm-project-12.0.0rc2.src.tar.xz
+/llvm-project-12.0.0rc2.src.tar.xz.sig
+/llvm-project-12.0.0rc3.src.tar.xz
+/llvm-project-12.0.0rc3.src.tar.xz.sig
+/llvm-project-12.0.0rc4.src.tar.xz
+/llvm-project-12.0.0rc4.src.tar.xz.sig
+/llvm-project-12.0.0rc5.src.tar.xz
+/llvm-project-12.0.0rc5.src.tar.xz.sig
+/llvm-project-12.0.0.src.tar.xz
+/llvm-project-12.0.0.src.tar.xz.sig
