--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /llvm-project-12.0.0rc5.src.tar.xz.sig
 /llvm-project-12.0.0.src.tar.xz
 /llvm-project-12.0.0.src.tar.xz.sig
+/llvm-project-12.0.1.src.tar.xz
+/llvm-project-12.0.1.src.tar.xz.sig
