--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /llvm-project-12.0.0.src.tar.xz.sig
 /llvm-project-12.0.1rc1.src.tar.xz
 /llvm-project-12.0.1rc1.src.tar.xz.sig
+/llvm-project-12.0.1rc3.src.tar.xz
+/llvm-project-12.0.1rc3.src.tar.xz.sig
