--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /llvm-project-12.0.1rc1.src.tar.xz.sig
 /llvm-project-12.0.1rc3.src.tar.xz
 /llvm-project-12.0.1rc3.src.tar.xz.sig
+/llvm-project-12.0.1.src.tar.xz
+/llvm-project-12.0.1.src.tar.xz.sig
