--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /llvm-project-12.0.1.src.tar.xz.sig
 /llvm-project-13.0.0rc1.src.tar.xz
 /llvm-project-13.0.0rc1.src.tar.xz.sig
+/llvm-project-13.0.0rc3.src.tar.xz
+/llvm-project-13.0.0rc3.src.tar.xz.sig
