--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /llvm-project-13.0.0.src.tar.xz.sig
 /llvm-project-13.0.1rc1.src.tar.xz
 /llvm-project-13.0.1rc1.src.tar.xz.sig
+/llvm-project-13.0.1rc2.src.tar.xz
+/llvm-project-13.0.1rc2.src.tar.xz.sig
