--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /llvm-project-13.0.1rc1.src.tar.xz.sig
 /llvm-project-13.0.1rc2.src.tar.xz
 /llvm-project-13.0.1rc2.src.tar.xz.sig
+/llvm-project-13.0.1rc3.src.tar.xz
+/llvm-project-13.0.1rc3.src.tar.xz.sig
