--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@
 /llvm-project-13.0.1rc2.src.tar.xz.sig
 /llvm-project-13.0.1rc3.src.tar.xz
 /llvm-project-13.0.1rc3.src.tar.xz.sig
+/llvm-project-13.0.1.src.tar.xz
+/llvm-project-13.0.1.src.tar.xz.sig
