--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /llvm-project-13.0.1rc3.src.tar.xz.sig
 /llvm-project-13.0.1.src.tar.xz
 /llvm-project-13.0.1.src.tar.xz.sig
+/llvm-project-14.0.0.src.tar.xz
+/llvm-project-14.0.0.src.tar.xz.sig
