--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /llvm-project-13.0.1.src.tar.xz.sig
 /llvm-project-14.0.0.src.tar.xz
 /llvm-project-14.0.0.src.tar.xz.sig
+/llvm-project-14.0.5.src.tar.xz.sig
+/llvm-project-14.0.5.src.tar.xz
