--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /llvm-project-13.0.0rc3.src.tar.xz.sig
 /llvm-project-13.0.0.src.tar.xz
 /llvm-project-13.0.0.src.tar.xz.sig
+/llvm-project-13.0.1.src.tar.xz
+/llvm-project-13.0.1.src.tar.xz.sig
