Update to LLVM 15.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@
 /llvm-project-14.0.0.src.tar.xz.sig
 /llvm-project-14.0.5.src.tar.xz.sig
 /llvm-project-14.0.5.src.tar.xz
+/llvm-project-15.0.0.src.tar.xz
+/llvm-project-15.0.0.src.tar.xz.sig
