--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@
 /llvm-project-14.0.5.src.tar.xz
 /llvm-project-15.0.0.src.tar.xz
 /llvm-project-15.0.0.src.tar.xz.sig
+/llvm-project-15.0.4.src.tar.xz
+/llvm-project-15.0.4.src.tar.xz.sig
