Update to LLVM 15.0.6

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@
 /llvm-project-15.0.0.src.tar.xz.sig
 /llvm-project-15.0.4.src.tar.xz
 /llvm-project-15.0.4.src.tar.xz.sig
+/llvm-project-15.0.6.src.tar.xz
+/llvm-project-15.0.6.src.tar.xz.sig
