--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@
 /llvm-project-15.0.4.src.tar.xz.sig
 /llvm-project-15.0.6.src.tar.xz
 /llvm-project-15.0.6.src.tar.xz.sig
+/llvm-project-15.0.7.src.tar.xz
+/llvm-project-15.0.7.src.tar.xz.sig
