--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,3 @@
-/llvm-project-11.0.0rc2.tar.xz
-/llvm-project-11.0.0rc2.tar.xz.sig
-/llvm-project-11.0.0rc3.tar.xz
-/llvm-project-11.0.0rc3.tar.xz.sig
-/llvm-project-11.0.0rc5.tar.xz
-/llvm-project-11.0.0rc5.tar.xz.sig
-/llvm-project-11.0.0rc6.tar.xz
-/llvm-project-11.0.0rc6.tar.xz.sig
-/llvm-project-11.0.0.tar.xz.sig
-/llvm-project-11.0.0.tar.xz
-/llvm-project-11.0.1rc1.src.tar.xz
-/llvm-project-11.0.1rc1.src.tar.xz.sig
-/llvm-project-11.0.1rc2.src.tar.xz
-/llvm-project-11.0.1rc2.src.tar.xz.sig
-/llvm-project-11.0.1.src.tar.xz
-/llvm-project-11.0.1.src.tar.xz.sig
-/llvm-project-11.1.0rc1.src.tar.xz
-/llvm-project-11.1.0rc1.src.tar.xz.sig
-/llvm-project-11.1.0rc2.src.tar.xz
-/llvm-project-11.1.0rc2.src.tar.xz.sig
-/llvm-project-12.0.0rc1.src.tar.xz
-/llvm-project-12.0.0rc1.src.tar.xz.sig
-/llvm-project-12.0.0rc2.src.tar.xz
-/llvm-project-12.0.0rc2.src.tar.xz.sig
-/llvm-project-12.0.0rc3.src.tar.xz
-/llvm-project-12.0.0rc3.src.tar.xz.sig
-/llvm-project-12.0.0rc4.src.tar.xz
-/llvm-project-12.0.0rc4.src.tar.xz.sig
-/llvm-project-12.0.0rc5.src.tar.xz
-/llvm-project-12.0.0rc5.src.tar.xz.sig
-/llvm-project-12.0.0.src.tar.xz
-/llvm-project-12.0.0.src.tar.xz.sig
-/llvm-project-12.0.1rc1.src.tar.xz
-/llvm-project-12.0.1rc1.src.tar.xz.sig
-/llvm-project-12.0.1rc3.src.tar.xz
-/llvm-project-12.0.1rc3.src.tar.xz.sig
-/llvm-project-12.0.1.src.tar.xz
-/llvm-project-12.0.1.src.tar.xz.sig
-/llvm-project-13.0.0rc1.src.tar.xz
-/llvm-project-13.0.0rc1.src.tar.xz.sig
-/llvm-project-13.0.0rc3.src.tar.xz
-/llvm-project-13.0.0rc3.src.tar.xz.sig
-/llvm-project-13.0.0.src.tar.xz
-/llvm-project-13.0.0.src.tar.xz.sig
-/llvm-project-13.0.1rc1.src.tar.xz
-/llvm-project-13.0.1rc1.src.tar.xz.sig
-/llvm-project-13.0.1rc2.src.tar.xz
-/llvm-project-13.0.1rc2.src.tar.xz.sig
-/llvm-project-13.0.1rc3.src.tar.xz
-/llvm-project-13.0.1rc3.src.tar.xz.sig
-/llvm-project-13.0.1.src.tar.xz
-/llvm-project-13.0.1.src.tar.xz.sig
-/llvm-project-14.0.0.src.tar.xz
-/llvm-project-14.0.0.src.tar.xz.sig
-/llvm-project-14.0.5.src.tar.xz.sig
-/llvm-project-14.0.5.src.tar.xz
-/llvm-project-15.0.0.src.tar.xz
-/llvm-project-15.0.0.src.tar.xz.sig
-/llvm-project-15.0.4.src.tar.xz
-/llvm-project-15.0.4.src.tar.xz.sig
-/llvm-project-15.0.6.src.tar.xz
-/llvm-project-15.0.6.src.tar.xz.sig
-/llvm-project-15.0.7.src.tar.xz
-/llvm-project-15.0.7.src.tar.xz.sig
+/*.tar.xz
+/*.tar.xz.sig
+/*.src.rpm
